# fake-llm-server

./: .gitignore  .gitmodules  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: run-tests.yml
docs/: code_map.md  spec.md
src/fake_llm_server/: __init__.py  _api_server.py  _models.py  _serving.py  main.py  models.py  server.py
tests/: __init__.py  test_api_server_endpoints.py  test_model_download.py  test_model_spec.py  test_model_support.py  test_model_translation.py  test_models_download.py  test_models_load.py  test_models_spec.py  test_models_translation.py  test_multi_model.py  test_server.py  test_serving_constraints.py  test_serving_model_support.py  test_serving_multi_model.py
