[project]
name = "fake-llm-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.3.5",
    "llama-cpp-python>=0.3.16",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "openai>=2.16.0",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = "src"